--- a/.gitea/workflows/cd.yaml
+++ b/.gitea/workflows/cd.yaml
@@ -10,13 +10,9 @@ jobs:
       id: short-sha
       with:
         length: 10
-    - name: Install kpack CLI
-      env:
-        KPACK_CLI_VERSION: "0.13.0"
-      run: |
-        curl -L "https://github.com/buildpacks-community/kpack-cli/releases/download/v${KPACK_CLI_VERSION}/kp-linux-amd64-${KPACK_CLI_VERSION}" -o kp
-        chmod +x kp
-        sudo mv kp /usr/local/bin/
+    - uses: gerlero/brew-install@v1
+      with:
+        packages: buildpacks-community/kpack-cli/kp
     - name: Configure kubectl
       uses: azure/k8s-set-context@v1
       with:
@@ -29,7 +25,8 @@ jobs:
         kp image patch tutorial-image --replace-additional-tag "ghcr.io/hvg-dev/php-test:sha-${SHORT_SHA}" --git-revision "${SHA}" -n test-builder
     - name: Wait for build to complete
       run: |
-        kp build logs tutorial-image -n test-builder
+        BUILD=$(kubectl -n test-builder get image tutorial-image -o jsonpath='{.status.buildCounter}')
+        kp build logs tutorial-image -n test-builder --build ${BUILD}
 #    - name: Update Kubernetes deployment
 #      run: |
 #        kubectl set image deployment/my-app my-app=<registry>/<repository>:${{ github.sha }}
