--- a/.gitea/workflows/cd.yaml
+++ b/.gitea/workflows/cd.yaml
@@ -24,10 +24,34 @@ jobs:
         kp version
     - name: Set up kubectl
       uses: azure/setup-kubectl@v4
-    - name: Configure kubectl
-      uses: azure/k8s-set-context@v1
-      with:
-        kubeconfig: ${{ secrets.KUBE_CONFIG }}
+    - name: Configure (kubectl)
+      env:
+        KUBE_CA_DATA: ${{ secrets.KUBE_CA_DATA }}
+        KUBE_USER_TOKEN: ${{ secrets.KUBE_USER_TOKEN }}
+      run: |
+        mkdir -p ~/.kube
+        tee "${HOME}/.kube/config" <<EOF
+        apiVersion: v1
+        kind: Config
+        clusters:
+        - cluster:
+          certificate-authority-data: ${KUBE_CA_DATA}
+          server: https://kubernetes.default.svc
+          name: local
+        contexts:
+        - context:
+          name: local
+          cluster: local
+          user: user
+          namespace: test-builder
+        current-context: local
+        users:
+        - name: local
+          user:
+            token: ${KUBE_USER_TOKEN}
+        EOF
+        chmod 700 "${HOME}/.kube"
+        chmod 600 "${HOME}/.kube/config"
     - name: Check kubernetes connection
       run: |
         curl -k -I https://kubernetes.default.svc || exit 0
