--- a/.gitea/workflows/cd.yaml
+++ b/.gitea/workflows/cd.yaml
@@ -5,7 +5,6 @@ env:
   NAMESPACE: ${{ github.repository_owner }}
   DOCKER_REGISTRY: ghcr.io
   DOCKER_REPOSITORY: ${{ github.repository }}
-  IMAGE_NAME: ${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/}
 jobs:
   build-and-deploy:
     env:
@@ -40,6 +39,7 @@ jobs:
         SHA: ${{ github.sha }}
         SHORT_SHA: ${{ steps.short-sha.outputs.sha }}
       run: |
+        echo "IMAGE_NAME=${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER/}" >> $GITHUB_ENV
         kp image patch $IMAGE_NAME --replace-additional-tag "${IMAGE}:sha-${SHORT_SHA}" --git-revision "${SHA}" -n $NAMESPACE
         kp image status $IMAGE_NAME -n $NAMESPACE
     - name: Wait for build to complete
