~ FIX image build and deploy pipeline

--- a/.gitea/workflows/cd.yaml
+++ b/.gitea/workflows/cd.yaml
@@ -19,7 +19,7 @@ jobs:
         KPACK_CLI_VERSION: "0.13.0"
       working-directory: /tmp
       run: |
-        mkdir kp-binaries
+        mkdir -p kp-binaries
         curl -sL "https://github.com/buildpacks-community/kpack-cli/releases/download/v${KPACK_CLI_VERSION}/kp-linux-amd64-${KPACK_CLI_VERSION}" -o kp-binaries/kp-linux-amd64-${KPACK_CLI_VERSION}
         curl -sLO "https://github.com/buildpacks-community/kpack-cli/releases/download/v${KPACK_CLI_VERSION}/kp-linux-amd64-${KPACK_CLI_VERSION}.sha256"
         sha256sum -c kp-linux-amd64-${KPACK_CLI_VERSION}.sha256 || exit 1
