+ ADD ssh deploy key

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -10,8 +10,18 @@ jobs:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0
+    - name: Setup cloudflared
+      uses: AnimMouse/setup-cloudflared@v2
+    - name: Configure ssh
+      run: |
+        mkdir -p ~/.ssh
+        chmod 700 ~/.ssh
+        tee ~/.ssh/config <<EOF
+        Host ssh-git.saito.systems
+          ProxyCommand cloudflared access ssh --hostname %h
+        EOF
     - uses: yesolutions/mirror-action@master
       with:
         REMOTE: ${{ secrets.DEPLOY_REPO_URL }}
-        GIT_USERNAME: ${{ secrets.DEPLOY_REPO_USERNAME }}
-        GIT_PASSWORD: ${{ secrets.DEPLOY_REPO_TOKEN }}
+        GIT_SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
+        GIT_SSH_NO_VERIFY_HOST: "true"
