--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -14,9 +14,9 @@ jobs:
 
     - uses: felegy/mirror-action@master
       with:
-        REMOTE: ${{ secrets.DEPLOY_REPO_URL }}
+        REMOTE: git@${{ secrets.DEPLOY_REPO }}:${{ github.repository }}.git
         SSH_CONFIG: |
-          Host ssh-git.saito.systems
+          Host ${{ secrets.DEPLOY_REPO }}
             ProxyCommand cloudflared access ssh --hostname %h
         GIT_SSH_PRIVATE_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
         GIT_SSH_NO_VERIFY_HOST: "true"
